--- a/RedsHTMLBuilder.csproj
+++ b/RedsHTMLBuilder.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
@@ -11,6 +11,7 @@
     <PackageReference Include="AjaxMin" Version="5.14.5506.26202" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.48" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="NUglify" Version="1.21.7" />
     <PackageReference Include="WebMarkupMin.Core" Version="2.16.0" />
   </ItemGroup>
 
